[package]
name = "terminus"
version = "0.2.0"
authors = ["geno nullfree <nullfree.geno@gmail.com>"]
license = "BSD-3-Clause"
description = "Terminus is an application for quickly locating exported or imported functions in Elf files"
readme = "README.md"
homepage = "https://github.com/genonullfree/terminus.git"
repository = "https://github.com/genonullfree/terminus.git"
keywords = ["radare2", "elf", "exports", "imports"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf_rs = "0.1.3"
structopt = "0.3.13"
crossterm = "0.22.1"
r2pipe = "0.6.0"
colored = "2.0.0"
